[package]
name = "node-merk"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_merk"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.3"

[dependencies]
neon = "0.8.3"
merk = { git = "https://github.com/dashevo/merk", branch = "no-simd" }
error-chain = "0.12.1"
